objects/ACRObj1__c.object
<CustomObject>
    <fields>
        <fullName>Field2__c</fullName>
        <description>Test sai kumar @#$%^&amp;*()_+-=?&gt;&lt;,./&quot;:;&apos;\][}{~!</description>
        <label>Field2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <description>sai phone symbol test 📞 and edit 📞</description>
        <label>Field3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field4__c</fullName>
        <label>Field4</label>
        <length>9</length>
        <type>Text</type>
    </fields>
</CustomObject>